Starting Game Page

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,6 +12,8 @@ html {
   scroll-behavior: smooth;
 }
 body {
+  text-transform: uppercase;
+  letter-spacing: 2px;
   // user-select: none;
 }
 // scroll bar color change
