--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,7 +14,7 @@ html {
 body {
   text-transform: uppercase;
   letter-spacing: 2px;
-  // user-select: none;
+  user-select: none;
 }
 // scroll bar color change
 ::-webkit-scrollbar {
